archetect-templating/tests/snapshots/test_templates__vm@int_rem_by_zero.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ 10 % 0 }}"
info: {}
input_file: archetect_templating/tests/inputs/int_rem_by_zero.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "unable to calculate 10 % 0",
    name: "int_rem_by_zero.txt",
    line: 1,
}

invalid operation: unable to calculate 10 % 0 (in int_rem_by_zero.txt:1)
----------------------------- int_rem_by_zero.txt -----------------------------
   1 > {{ 10 % 0 }}
     i    ^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

